Add save search functionality and add testing strategy
